objects/ADD_Product__c.object
<CustomObject>
    <fields>
        <fullName>ADD_Product_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>ADD Product Ext Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Party</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>ADD Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ADD Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADD Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>